--- a/app/src/main/res/layout/item_new_friend.xml
+++ b/app/src/main/res/layout/item_new_friend.xml
@@ -11,7 +11,6 @@
         android:layout_height="45dp"
         android:layout_margin="10dp"
         android:src="@mipmap/ic_addfriend"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -20,39 +19,60 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginStart="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_head"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/iv_head" />
+
     <TextView
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="@color/color_white"
-        android:paddingEnd="10dp"
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_head"
+        app:layout_constraintStart_toEndOf="@id/iv_head" />
+
+    <TextView
+        android:id="@+id/ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:paddingStart="10dp"
         android:paddingTop="5dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="5dp"
         android:text="同意"
-        android:id="@+id/ok"
-        android:background="@color/colorAccent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="@color/color_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        app:layout_constraintEnd_toStartOf="@id/ok"
+        android:id="@+id/no"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="@color/color_white"
-        android:paddingEnd="10dp"
+        android:background="@color/qmui_config_color_red"
         android:paddingStart="10dp"
         android:paddingTop="5dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="5dp"
         android:text="拒绝"
-        android:id="@+id/no"
-        android:background="@color/qmui_config_color_red"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="@color/color_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ok"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/color_111111"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@id/iv_head"
+        app:layout_constraintTop_toBottomOf="@id/iv_head" />
 </androidx.constraintlayout.widget.ConstraintLayout>
