--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -117,7 +117,19 @@
             app:layout_constraintBottom_toBottomOf="@id/tv_name"
             app:layout_constraintStart_toEndOf="@id/iv_vip"
             app:layout_constraintTop_toTopOf="@id/tv_name" />
+        <TextView
+            android:id="@+id/tv_vip"
+            android:text="开通 VIP"
+            android:paddingEnd="10dp"
+            android:textColor="@color/btn_ghost_blue_text_normal"
+            android:textSize="12sp"
 
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_name"
+            app:layout_constraintBottom_toBottomOf="@id/tv_name"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/tv_id"
@@ -134,7 +146,7 @@
             android:id="@+id/tv_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="10dp"
             android:text="位置 :暂无"
             android:textColor="#ff5d5d5d"
             android:textSize="14sp"
@@ -147,17 +159,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="21dp"
-            android:text="加好友"
+            android:text="十加好友"
             android:textColor="#ff5d5d5d"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@id/iv_add_friend"
 
             app:layout_constraintTop_toTopOf="@id/iv_add_friend" />
 
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="21dp"
+            android:text=""
+            android:textColor="#ff5d5d5d"
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@id/iv_add_friend"
+
+            app:layout_constraintTop_toBottomOf="@id/tv_add_friend" />
+
         <ImageView
             android:id="@+id/iv_add_friend"
             android:layout_width="15dp"
             android:layout_height="15dp"
+            android:visibility="gone"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
             android:src="@mipmap/ic_add_friend"
@@ -169,9 +194,9 @@
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="38dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_position"
+            app:layout_constraintTop_toBottomOf="@id/tv_time"
             app:qmui_backgroundColor="#83C6FB"
             app:qmui_borderWidth="0dp"
             app:qmui_radius="10dp" />
