--- a/app/src/main/res/layout/item_examine.xml
+++ b/app/src/main/res/layout/item_examine.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_head"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,24 +46,27 @@
 
     <TextView
         android:id="@+id/tv_ok"
-        android:textColor="@color/qmui_config_color_white"
-        android:background="@color/colorAccent"
-        android:text="维持原判"
-        app:layout_constraintEnd_toStartOf="@id/tv_no"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@id/tv_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:background="@color/colorAccent"
+        android:padding="5dp"
+        android:text="维持原判"
+        android:textColor="@color/qmui_config_color_white"
+        app:layout_constraintEnd_toStartOf="@id/tv_no"
+        app:layout_constraintTop_toTopOf="@id/tv_no"
         tools:ignore="MissingConstraints" />
+
     <TextView
         android:id="@+id/tv_no"
-        android:textColor="@color/qmui_config_color_white"
-        android:background="@color/qmui_config_color_red"
-        android:text="推翻原判"
-        app:layout_constraintEnd_toEndOf="@id/tv_detail"
-        app:layout_constraintTop_toBottomOf="@id/tv_detail"
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/qmui_config_color_red"
+        android:padding="5dp"
+        android:text="推翻原判"
+        android:textColor="@color/qmui_config_color_white"
+        app:layout_constraintEnd_toEndOf="@id/tv_detail"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
