--- a/app/src/main/res/layout/item_my.xml
+++ b/app/src/main/res/layout/item_my.xml
@@ -52,8 +52,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginStart="53.5dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="11.5dp"
-        android:background="@color/color_A4A4A4"
+        android:background="@color/color_DFDFDF"
         app:layout_constraintTop_toBottomOf="@id/image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
