--- a/app/src/main/res/layout/activity_tou_su.xml
+++ b/app/src/main/res/layout/activity_tou_su.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <com.diwaves.news.tools.MyTitleBar
+        android:id="@+id/titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:center_txt="投诉" />
+
+    <TextView
+        android:background="@color/color_77DFDFDF"
+        android:textColor="@color/color_5b5b5b"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="暂无数据" />
 </LinearLayout>
