--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="color_ffcccc">#ffcccc</color>
     <color name="color_F4AB2B">#F4AB2B</color>
     <color name="color_888888">#ff888888</color>
-
+    <color name="color_77DFDFDF">#77DFDFDF</color>
     <color name="color_5cd65c">#5cd65c</color>
 
 </resources>
