--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="color_137ed0">#ff137ed0</color>
     <color name="color_e9e9e9">#ffe9e9e9</color>
     <color name="color_fafafa">#ffFAFAFA</color>
-    <color name="color_ffcccc">#ffcccc</color>
+    <color name="color_ffcccc">#40ffcccc</color>
     <color name="color_F4AB2B">#F4AB2B</color>
     <color name="color_888888">#ff888888</color>
     <color name="color_77DFDFDF">#77DFDFDF</color>
