--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -11,9 +11,10 @@
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="11dp"
+        android:layout_width="31dp"
         android:layout_height="20dp"
-        android:layout_marginStart="20dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:src="@mipmap/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
