--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <attr name="center_txt" format="string" />
         <attr name="end_txt" format="string" />
         <attr name="end_txt_color" format="color"/>
+        <attr name="start_txt_color" format="color"/>
         <attr name="end_img" format="reference"/>
 
     </declare-styleable>
