--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         app:center_txt="写帖子"
         app:end_img="@mipmap/ic_send"
-        app:end_txt="存草稿"
-        app:end_txt_color="#017BD0" />
+        app:star_txt="存草稿"
+        app:end_txt="发布"
+        app:start_txt_color="#017BD0" />
 
     <TextView
         android:id="@+id/tv_spnner"
@@ -134,7 +135,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="10dp"
-        android:text="保存"
+        android:text="完成"
         android:layout_marginBottom="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -142,6 +143,7 @@
     <ImageView
         android:id="@+id/iv_img"
         android:layout_width="19dp"
+        android:visibility="gone"
         android:layout_height="19dp"
         android:layout_marginStart="30dp"
         android:src="@mipmap/ic_img"
@@ -153,7 +155,8 @@
         android:id="@+id/iv_recall"
         android:layout_width="19dp"
         android:layout_height="19dp"
-        android:layout_marginStart="30dp"    android:layout_marginBottom="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
         android:src="@mipmap/ic_recall"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/iv_recall_no"
@@ -174,8 +177,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:text="A"
-        app:layout_constraintBottom_toBottomOf="@id/iv_img"
+        app:layout_constraintBottom_toBottomOf="@id/iv_recall_no"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/iv_img"
-        app:layout_constraintTop_toTopOf="@id/iv_img" />
+        app:layout_constraintTop_toTopOf="@id/iv_recall_no" />
 </androidx.constraintlayout.widget.ConstraintLayout>
