--- a/app/src/main/res/layout/item_rmb_button.xml
+++ b/app/src/main/res/layout/item_rmb_button.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="103dp"
+    android:layout_width="wrap_content"
     android:id="@+id/cl_bg"
     android:layout_height="wrap_content"
     android:background="@drawable/conner5_solid_white_stoken_gray"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp"
+    android:padding="10dp"
     android:layout_marginTop="10dp"
     tools:ignore="MissingConstraints">
 
