--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         app:center_txt="写帖子"
         app:end_img="@mipmap/ic_send"
-        app:star_txt="存草稿"
         app:end_txt="发布"
+        app:star_txt="存草稿"
         app:start_txt_color="#017BD0" />
 
     <TextView
@@ -113,7 +113,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_white"
         android:visibility="gone"
@@ -122,33 +122,32 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_white"
         android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/rv_1"
-        app:layout_constraintTop_toBottomOf="@id/tv_spnner" />
+        app:layout_constraintTop_toBottomOf="@id/rv_1" />
 
 
     <TextView
         android:id="@+id/tv_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:paddingStart="10dp"
         android:text="完成"
-        android:layout_marginBottom="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageView
         android:id="@+id/iv_img"
         android:layout_width="19dp"
-        android:visibility="gone"
         android:layout_height="19dp"
         android:layout_marginStart="30dp"
-        android:src="@mipmap/ic_img"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
+        android:src="@mipmap/ic_img"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_save" />
 
     <ImageView
@@ -166,7 +165,8 @@
         android:id="@+id/iv_recall_no"
         android:layout_width="19dp"
         android:layout_height="19dp"
-        android:layout_marginStart="30dp"    android:layout_marginBottom="10dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="10dp"
         android:src="@mipmap/ic_recall_no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_recall" />
@@ -177,8 +177,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:text="A"
-        app:layout_constraintBottom_toBottomOf="@id/iv_recall_no"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_recall_no"
         app:layout_constraintStart_toEndOf="@id/iv_img"
         app:layout_constraintTop_toTopOf="@id/iv_recall_no" />
 </androidx.constraintlayout.widget.ConstraintLayout>
