--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -34,6 +34,49 @@
                 android:textSize="19sp"
                 app:layout_constraintTop_toBottomOf="@id/titleBar" />
 
+            <ImageView
+                android:id="@+id/iv_head"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_title"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="韩江雪"
+                android:textColor="#ff137ed0"
+                android:textSize="15sp"
+                app:layout_constraintStart_toEndOf="@id/iv_head"
+                app:layout_constraintTop_toTopOf="@id/iv_head"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="05-14 16:22"
+                android:textColor="#ff989898"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toBottomOf="@id/iv_head"
+                app:layout_constraintStart_toStartOf="@id/tv_name"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/tv_introduction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:paddingStart="14dp"
+                android:text=""
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/iv_head"
+                tools:ignore="MissingConstraints" />
+
             <TextView
                 android:id="@+id/tv_detail"
                 android:layout_width="wrap_content"
@@ -49,7 +92,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
+                app:layout_constraintTop_toBottomOf="@id/tv_introduction" />
 
             <TextView
                 android:id="@+id/tv_look"
@@ -120,7 +163,7 @@
                 android:layout_height="15dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="20dp"
-                android:src="@mipmap/ic_start_yellow"
+                android:src="@mipmap/ic_star_null"
                 app:layout_constraintBottom_toBottomOf="@id/titleBar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/titleBar" />
@@ -135,9 +178,10 @@
                 android:paddingTop="11dp"
                 android:paddingEnd="14dp"
                 android:paddingBottom="11dp"
-                android:text="微信"
+                android:text="微信  "
                 android:textColor="#ff111111"
                 android:textSize="11sp"
+                app:layout_constraintEnd_toStartOf="@id/tv_pyq"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
                 app:qmui_borderColor="#e9e9e9" />
@@ -166,6 +210,7 @@
                 android:textColor="#ff111111"
                 android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_wx"
                 app:layout_constraintTop_toBottomOf="@id/tv_look"
                 app:qmui_borderColor="#e9e9e9" />
 
@@ -183,10 +228,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="评分：0.0"
-                android:textColor="#ff111111"
-                app:layout_constraintBottom_toBottomOf="@id/tv_wx"
-                app:layout_constraintTop_toTopOf="@id/tv_wx" />
+                android:text="次推荐"
+                android:textColor="#ff989898"
+                app:layout_constraintBottom_toBottomOf="@id/tv_look"
+                app:layout_constraintTop_toTopOf="@id/tv_look" />
 
             <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                 android:id="@+id/rb_1"
@@ -288,7 +333,7 @@
                 android:text="最热"
                 android:textColor="#ff137ed0"
                 android:textSize="15sp"
-                android:visibility="invisible"
+
                 app:layout_constraintEnd_toStartOf="@id/tv_1"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
@@ -302,7 +347,7 @@
                 android:text="/"
                 android:textColor="#ff111111"
                 android:textSize="9sp"
-                android:visibility="invisible"
+
                 app:layout_constraintBottom_toBottomOf="@id/tv_hot"
                 app:layout_constraintEnd_toStartOf="@id/tv_new"
                 app:layout_constraintStart_toEndOf="@id/tv_hot"
@@ -317,7 +362,7 @@
                 android:text="最新"
                 android:textColor="@color/color_111111"
                 android:textSize="15sp"
-                android:visibility="invisible"
+
                 app:layout_constraintEnd_toStartOf="@id/tv_2"
                 app:layout_constraintStart_toEndOf="@id/tv_1"
                 app:layout_constraintTop_toBottomOf="@id/rb_1" />
@@ -328,40 +373,46 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
                 android:text="/"
+                android:visibility="gone"
                 android:textColor="#ff111111"
                 android:textSize="9sp"
-                android:visibility="gone"
+
                 app:layout_constraintBottom_toBottomOf="@id/tv_hot"
                 app:layout_constraintEnd_toStartOf="@id/tv_send"
                 app:layout_constraintStart_toEndOf="@id/tv_new"
                 app:layout_constraintTop_toTopOf="@id/tv_hot" />
+
             <TextView
                 android:id="@+id/tv_novip"
-                android:text="以下内容仅VIP课件"
-                android:gravity="center"
-                app:layout_constraintTop_toBottomOf="@id/rb_1"
-                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="以下内容仅VIP课件"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@id/rb_1" />
+
             <TextView
                 android:id="@+id/tv_buy_vip"
-                android:text="购买VIP"
-                android:gravity="center"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_novip"
-                android:textColor="@color/color_2BA4D9"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="购买VIP"
+                android:textColor="@color/color_2BA4D9"
+                android:visibility="invisible"
+                app:layout_constraintTop_toBottomOf="@id/tv_novip" />
+
             <TextView
                 android:id="@+id/tv_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
                 android:layout_marginTop="33dp"
+                android:visibility="gone"
                 android:text="推+送"
                 android:textColor="@color/color_111111"
                 android:textSize="15sp"
-                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_2"
                 app:layout_constraintTop_toBottomOf="@id/rb_1" />
@@ -379,7 +430,6 @@
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_marginBottom="10dp"
         android:background="@color/color_DFDFDF"
         app:layout_constraintBottom_toTopOf="@id/tv_tui" />
 
@@ -402,4 +452,28 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_send"
         app:layout_constraintTop_toTopOf="@id/iv_send" />
 
+    <TextView
+        android:id="@+id/tv_up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="↑"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_tui"
+        app:layout_constraintEnd_toStartOf="@id/tv_down"
+        app:layout_constraintTop_toTopOf="@id/tv_tui" />
+
+    <TextView
+        android:id="@+id/tv_down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="↓"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_tui"
+        app:layout_constraintBottom_toBottomOf="@id/tv_tui" />
 </androidx.constraintlayout.widget.ConstraintLayout>
