--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -23,10 +23,18 @@
         android:text="韩江雪"
         android:textColor="#ff137ed0"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/iv_head"
         app:layout_constraintStart_toEndOf="@id/iv_head"
         app:layout_constraintTop_toTopOf="@id/iv_head" />
-
+    <TextView
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="05-14 16:22"
+        android:textColor="#ff989898"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/iv_head"
+        app:layout_constraintStart_toStartOf="@id/tv_name"
+        tools:ignore="MissingConstraints" />
     <TextView
         android:id="@+id/tv_good"
         android:layout_width="wrap_content"
@@ -69,16 +77,7 @@
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:text="05-14 10:31"
-        android:textColor="#ff989898"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/tv_title"
-        app:layout_constraintTop_toBottomOf="@id/iv_detail" />
+
 
     <TextView
         android:id="@+id/tv_replay"
@@ -86,9 +85,34 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="回复"
-        android:textColor="#ff111111"
+        android:visibility="gone"
+        android:textColor="#ff989898"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_time"
         app:layout_constraintStart_toEndOf="@id/tv_time"
-        app:layout_constraintTop_toTopOf="@id/tv_time" />
+         />
+
+    <TextView
+        android:id="@+id/tv_rmb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="预测20币"
+        android:textColor="#ff989898"
+        android:textSize="12sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="@id/tv_time"
+        />
+
+    <TextView
+        android:id="@+id/tv_zhang"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@id/tv_rmb"
+        android:text="涨"
+        android:textColor="#ff137ed0"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_rmb"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
