--- a/app/src/main/res/layout/item_rmb_button.xml
+++ b/app/src/main/res/layout/item_rmb_button.xml
@@ -2,12 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:id="@+id/cl_bg"
     android:layout_height="wrap_content"
-    android:background="@drawable/conner5_solid_white_stoken_gray"
+    android:background="@drawable/conner5_solid_white_stoken1_gray"
     android:padding="10dp"
     android:layout_marginTop="10dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     tools:ignore="MissingConstraints">
 
     <TextView
