--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_white"
     tools:ignore="MissingConstraints">
 
     <ScrollView
@@ -66,8 +67,8 @@
                 app:layout_constraintStart_toStartOf="@id/tv_name"
                 tools:ignore="MissingConstraints" />
 
-            <TextView
-                android:id="@+id/tv_introduction"
+            <WebView
+                android:id="@+id/wb_introduction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -92,7 +93,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_introduction" />
+                app:layout_constraintTop_toBottomOf="@id/wb_introduction" />
 
             <TextView
                 android:id="@+id/tv_look"
@@ -431,6 +432,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/color_DFDFDF"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/tv_tui" />
 
     <ImageView
