--- a/app/src/main/res/layout/activity_push_tie.xml
+++ b/app/src/main/res/layout/activity_push_tie.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/color_white"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,17 +16,19 @@
             android:id="@+id/titleBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:end_img="@mipmap/ic_send"
             app:end_txt="发布"
-            app:star_txt="推帖子" />
+            app:center_txt="推荐" />
 
         <EditText
             android:id="@+id/et_txt"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:gravity="start"
+            android:background="@null"
             android:paddingEnd="20dp"
-            android:text="这一刻的想法..."
+            android:hint="这一刻的想法..."
             android:textColor="#ff989898"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/titleBar" />
@@ -41,6 +44,7 @@
             android:paddingBottom="19dp"
             android:text="SpaceX“龙”飞船首次载人试飞"
             android:textColor="#ff020202"
+            android:background="#77e9e9e9"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="10dp"
             android:text="使用银币推送"
             android:textColor="#ff020202"
             android:textSize="14sp"
@@ -83,7 +87,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="25dp"
-            android:paddingTop="20dp"
             android:paddingEnd="25dp"
             android:paddingBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/tv_title_ag" />
@@ -93,7 +96,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="10dp"
             android:text="使用金币推送"
             android:textColor="#ff020202"
             android:textSize="14sp"
@@ -116,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="25dp"
-            android:paddingTop="20dp"
+
             android:paddingEnd="25dp"
             android:paddingBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/tv_title_au" />
