--- a/app/src/main/res/layout/activity_push_tie.xml
+++ b/app/src/main/res/layout/activity_push_tie.xml
@@ -130,6 +130,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="15dp"
             android:text="温馨提示："
+            android:visibility="invisible"
             android:textColor="#ff5b5b5b"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/rv_au" />
@@ -138,6 +139,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginEnd="88dp"
+            android:visibility="invisible"
             android:src="@mipmap/ic_check_on"
             app:layout_constraintBottom_toBottomOf="@id/tv_title_bottom"
             app:layout_constraintEnd_toEndOf="parent"
@@ -148,6 +150,7 @@
             android:layout_height="wrap_content"
             android:paddingEnd="15dp"
             android:text="推给好友"
+            android:visibility="invisible"
             android:textColor="#ff5b5b5b"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -158,6 +161,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="15dp"
             android:paddingTop="15dp"
+            android:visibility="invisible"
             android:paddingBottom="25dp"
             android:text="1银币推给1人，1金币推给10人"
             android:textColor="#ff5b5b5b"
