--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -234,11 +234,24 @@
                 app:layout_constraintBottom_toBottomOf="@id/tv_look"
                 app:layout_constraintTop_toTopOf="@id/tv_look" />
 
-            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+
+            <TextView
+                android:id="@+id/tv_sorce"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/color_444444"
+
+                app:layout_constraintTop_toBottomOf="@id/tv_wx" />
+
+            <TextView
                 android:id="@+id/rb_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/bg_conner16_gray"
                 android:paddingStart="21dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="21dp"
@@ -248,15 +261,13 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/rb_2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_wx"
-                app:qmui_backgroundColor="@color/color_e9e9e9"
-                app:qmui_borderColor="@color/color_e9e9e9"
-                app:qmui_radius="16dp" />
+                app:layout_constraintTop_toBottomOf="@id/tv_sorce" />
 
-            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            <TextView
                 android:id="@+id/rb_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_conner16_gray"
                 android:paddingStart="21dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="21dp"
@@ -266,15 +277,13 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@id/rb_3"
                 app:layout_constraintStart_toEndOf="@id/rb_1"
-                app:layout_constraintTop_toTopOf="@id/rb_1"
-                app:qmui_backgroundColor="@color/color_e9e9e9"
-                app:qmui_borderColor="@color/color_e9e9e9"
-                app:qmui_radius="16dp" />
+                app:layout_constraintTop_toTopOf="@id/rb_1" />
 
-            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            <TextView
                 android:id="@+id/rb_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_conner16_gray"
                 android:paddingStart="21dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="21dp"
@@ -284,15 +293,13 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@id/rb_4"
                 app:layout_constraintStart_toEndOf="@id/rb_2"
-                app:layout_constraintTop_toTopOf="@id/rb_1"
-                app:qmui_backgroundColor="@color/color_e9e9e9"
-                app:qmui_borderColor="@color/color_e9e9e9"
-                app:qmui_radius="16dp" />
+                app:layout_constraintTop_toTopOf="@id/rb_1" />
 
-            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            <TextView
                 android:id="@+id/rb_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_conner16_gray"
                 android:paddingStart="21dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="21dp"
@@ -302,15 +309,13 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@id/rb_5"
                 app:layout_constraintStart_toEndOf="@id/rb_3"
-                app:layout_constraintTop_toTopOf="@id/rb_1"
-                app:qmui_backgroundColor="@color/color_e9e9e9"
-                app:qmui_borderColor="@color/color_e9e9e9"
-                app:qmui_radius="16dp" />
+                app:layout_constraintTop_toTopOf="@id/rb_1" />
 
-            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            <TextView
                 android:id="@+id/rb_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_conner16_gray"
                 android:paddingStart="21dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="21dp"
@@ -320,10 +325,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/rb_4"
-                app:layout_constraintTop_toTopOf="@id/rb_1"
-                app:qmui_backgroundColor="@color/color_e9e9e9"
-                app:qmui_borderColor="@color/color_e9e9e9"
-                app:qmui_radius="16dp" />
+                app:layout_constraintTop_toTopOf="@id/rb_1" />
 
 
             <TextView
@@ -374,9 +376,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
                 android:text="/"
-                android:visibility="gone"
                 android:textColor="#ff111111"
                 android:textSize="9sp"
+                android:visibility="gone"
 
                 app:layout_constraintBottom_toBottomOf="@id/tv_hot"
                 app:layout_constraintEnd_toStartOf="@id/tv_send"
@@ -410,10 +412,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
                 android:layout_marginTop="33dp"
-                android:visibility="gone"
                 android:text="推+送"
                 android:textColor="@color/color_111111"
                 android:textSize="15sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_2"
                 app:layout_constraintTop_toBottomOf="@id/rb_1" />
@@ -431,8 +433,8 @@
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/color_DFDFDF"
         android:layout_marginBottom="10dp"
+        android:background="@color/color_DFDFDF"
         app:layout_constraintBottom_toTopOf="@id/tv_tui" />
 
     <ImageView
@@ -475,7 +477,7 @@
         android:paddingEnd="10dp"
         android:text="↓"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_tui"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_tui"
-        app:layout_constraintBottom_toBottomOf="@id/tv_tui" />
+        app:layout_constraintTop_toTopOf="@id/tv_tui" />
 </androidx.constraintlayout.widget.ConstraintLayout>
