--- a/app/src/main/res/layout/pop_select_photo.xml
+++ b/app/src/main/res/layout/pop_select_photo.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="30dp"
-        android:text="发送图片"
+        android:text="发送图片贴"
         android:textColor="@color/color_5b5b5b"
         tools:ignore="MissingConstraints" />
 
@@ -26,9 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="15dp"
         android:text="拍摄"
-        android:textColor="@color/color_017BD0" />
+        android:textColor="@color/color_017BD0"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
@@ -40,9 +41,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+
+        android:padding="15dp"
         android:text="从相册选取"
-        android:textColor="@color/color_017BD0" />
+        android:textColor="@color/color_017BD0"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
@@ -54,8 +57,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="20dp"
+
+        android:padding="15dp"
         android:text="取消"
-        android:textColor="@color/color_017BD0" />
+        android:textColor="@color/color_017BD0"
+        android:textSize="18sp" />
 
 </LinearLayout>
