--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -107,7 +107,7 @@
         android:gravity="top|left"
         android:hint="编辑内容"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/iv_img"
+        app:layout_constraintBottom_toTopOf="@id/ll_main_color"
         app:layout_constraintTop_toBottomOf="@id/et_title" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -162,7 +162,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/photo"
-            android:visibility="gone" />
+             />
 
         <ImageView
             android:id="@+id/button_bold"
